fix(display): unify displayName to Git ID Switcher
Fix mismatch between extension ID (git-id-switcher) and displayName.
Add icon SVG file.

--- a/extensions/git-identity-switcher/package.json
+++ b/extensions/git-identity-switcher/package.json
@@ -1,6 +1,6 @@
 {
   "name": "git-id-switcher",
-  "displayName": "Git Identity Switcher",
+  "displayName": "Git ID Switcher",
   "description": "Switch between multiple Git identities with one click. Automatically configures Git author, SSH keys, and GPG signing.",
   "version": "0.1.0",
   "publisher": "nullvariant",
@@ -34,7 +34,7 @@
       }
     ],
     "configuration": {
-      "title": "Git Identity Switcher",
+      "title": "Git ID Switcher",
       "properties": {
         "gitIdentitySwitcher.identities": {
           "type": "array",
