--- a/extensions/git-identity-switcher/package.json
+++ b/extensions/git-identity-switcher/package.json
@@ -2,7 +2,7 @@
   "name": "git-id-switcher",
   "displayName": "Git ID Switcher",
   "description": "Switch between multiple Git identities with one click. Automatically configures Git author, SSH keys, and GPG signing.",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "publisher": "nullvariant",
   "engines": {
     "vscode": "^1.85.0"
@@ -68,7 +68,11 @@
                 "description": "GPG key ID for commit signing (optional)"
               }
             },
-            "required": ["id", "name", "email"]
+            "required": [
+              "id",
+              "name",
+              "email"
+            ]
           }
         },
         "gitIdentitySwitcher.defaultIdentity": {
