--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base"],
+  "extends": ["config:recommended"],
   "schedule": ["before 5am on wednesday"],
   "timezone": "Asia/Tokyo",
   "labels": ["dependencies", "renovate"],
